--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@reach/router": "^1.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "dotenv": "^8.2.0",
+    "history": "^4.10.1",
     "hover.css": "^2.3.2",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
@@ -39,6 +42,14 @@
     ]
   },
   "devDependencies": {
-    "@fortawesome/free-brands-svg-icons": "^5.13.0"
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "concurrently": "^5.1.0",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.3",
+    "nodemailer": "^6.4.6",
+    "nodemon": "^2.0.3"
   }
 }
