--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "history": "^4.10.1",
     "hover.css": "^2.3.2",
+    "nodemailer-mailgun-transport": "^2.0.0",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
@@ -21,10 +22,10 @@
     "wowjs": "^1.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node backend.js",
+    "backend": "nodemon backend.js",
+    "frontend": "npm run front --prefix my-portfolio",
+    "dev": "concurrently \"npm run backend\" \"react-scripts start --prefix my-portfolio\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -48,7 +49,6 @@
     "concurrently": "^5.1.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "http-proxy-middleware": "^1.0.3",
     "nodemailer": "^6.4.6",
     "nodemon": "^2.0.3"
   }
