--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "history": "^4.10.1",
     "hover.css": "^2.3.2",
     "react": "^16.13.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
+    "sweetalert2": "^9.10.12",
     "wowjs": "^1.1.3"
   },
   "scripts": {
