--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
+    "firebase": "^7.14.2",
     "history": "^4.10.1",
     "hover.css": "^2.3.2",
     "react": "^16.13.0",
