--- a/package.json
+++ b/package.json
@@ -46,12 +46,6 @@
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "axios": "^0.19.2",
-    "body-parser": "^1.19.0",
-    "concurrently": "^5.1.0",
-    "cookie-parser": "^1.4.5",
-    "express": "^4.17.1",
-    "nodemailer": "^6.4.6",
-    "nodemon": "^2.0.3"
+    "axios": "^0.19.2"
   }
 }
