--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
+    "react-typing-effect": "^2.0.3",
     "sweetalert2": "^9.10.12",
     "wowjs": "^1.1.3"
   },
